<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1"
                    android:contentDescription="@string/employee_pic"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstnameTextView"/>
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lastnameTextView"/>
                <TextView
                        android:text="@string/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/jobtitleTextView"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
                android:text="@string/employee_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/employee_infoTextView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center">
        <TextView
                android:text="@string/_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/oneTextView"
                android:layout_weight="1" android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/twoTextView"
                android:layout_weight="1" android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/threeTextView"
                android:layout_weight="1" android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/fourTextView"
                android:layout_weight="1" android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/fiveTextView"
                android:layout_weight="1" android:textAlignment="center"
                android:onClick="numberClicked"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>